@@ -59,6 +59,8 @@ lintian (2.5.53) UNRELEASED; urgency=medium
     + [CL] Correct false positives in
       unconditional-use-of-dpkg-statoverride by detecting "if !" as a
       valid shell prefix.  (Closes: #869587)
+    + [CL] Check for missing calls to dpkg-maintscript-helper(1) in
+      maintainer scripts.  (Closes: #872042)
   * checks/testsuite.{desc,pm}:
     + [CL] Remove recommendations to add a "Testsuite: autopkgtest" field
       to debian/control as it is added when needed by dpkg-source(1)
